<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.com.navia.sdk.MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/sdk_init"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/sdk_ctl_init" />

        <Button
            android:id="@+id/sdk_destroy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/sdk_ctl_destroy" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/sdk_force"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sdk_force" />

            <Button
                android:id="@+id/server_latest_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:text="@string/server_latest_list" />
        </LinearLayout>

        <ListView
            android:id="@+id/latest_updates_list_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <Button
            android:id="@+id/local_updates_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/local_latest_list" />

        <ListView
            android:id="@+id/local_updates_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ListView>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/building_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/building_id_title"/>

            <EditText
                android:id="@+id/building_id"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/default_building_id" />

            <Button
                android:id="@+id/start_locater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:text="@string/locater_ctl_start" />

            <Button
                android:id="@+id/stop_locater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:text="@string/locater_ctl_stop" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/location_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"/>
                />

            <TextView
                android:id="@+id/location_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"/>
                />

            <TextView
                android:id="@+id/location_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"/>
            />

            <TextView
                android:id="@+id/location_lng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"/>
            />


        </LinearLayout>


    </LinearLayout>

</ScrollView>