<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 <nlsde.junction.topbar.TopBar
        android:id="@+id/topbar_about"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/daohanglan"
        custom:titleTextColor="#ffffff"
        custom:titleTextSize="10dp" >
    </nlsde.junction.topbar.TopBar>
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/app_version" />

    <TextView
        android:id="@+id/app_detail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:padding="20dp"
        android:text="@string/app_detail"
        android:textColor="#8e8e8e"
        android:textSize="15dp" />

</RelativeLayout>
