<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#1EB1F7"
        android:padding="20dp"
         >

        <TextView
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jichangshoumoshikebiao" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/aiport_xian" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dongzhimen"
                android:layout_weight="1"
                android:textColor="@android:color/white" 
                android:gravity="center_horizontal"/>
  			<TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white" 
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feijichang"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                 android:gravity="center_horizontal" />

        </LinearLayout>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/jicchangkuaigui_detail"
            android:textColor="@android:color/white"
            android:textSize="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
     <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000000"
            android:text="@string/shifache" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
             android:textColor="#000000"
            android:text="06:00" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="2dp"
        android:layout_height="fill_parent"
        android:background="#CCCCCC" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
             android:textColor="#000000"
            android:text="@string/mobanche" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
             android:textColor="#000000"
            android:text="22:30" />
    </LinearLayout>
</LinearLayout>

<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#CCCCCC"></LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    >
    <LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="#000000"
            android:text="@string/ditiezhancheng" />

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="#000000"
            android:text="2站" />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="2dp"
        android:layout_height="fill_parent"
        android:background="#CCCCCC"></LinearLayout>
       <LinearLayout 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="#000000"
            android:text="@string/xianchengshijian" />

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="#000000"
            android:text="20分钟" />
        
    </LinearLayout>
</LinearLayout>
<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#CCCCCC"></LinearLayout>
</LinearLayout>


