<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <nlsde.junction.topbar.TopBar
        android:id="@+id/topbar_bus"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/daohanglan"
        custom:titleTextColor="#ffffff"
        custom:titleTextSize="10dp" >
    </nlsde.junction.topbar.TopBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:padding="20dp" >

        <TextView
            android:id="@+id/busnum"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:background="@drawable/bus_number"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/nodata" />

        <TextView
            android:id="@+id/starttostop"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/nodata" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/busfirst" />

        <TextView
            android:id="@+id/busfirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nodata" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/bussecond" />

        <TextView
            android:id="@+id/bussecond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nodata" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/busthird" />

        <TextView
            android:id="@+id/busthird"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nodata" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

       

        <TextView
            android:id="@+id/bustotal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/nodata" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="fill_parent"
        android:layout_height="100dp" >
    </ImageView>

    <Gallery
        android:id="@+id/gallery"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:spacing="10dp" >
    </Gallery>

</LinearLayout>