<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/shop_poi_logo"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/shop_poi_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/shop_poi_logo"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/shop_poi_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/shop_poi_name"
            android:layout_below="@+id/shop_poi_name"
            android:textColor="#000000" />
  <Button
            android:id="@+id/shop_poi_cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/guanbi" />
      
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/shop_poi_detailbutton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/xiangxixinxi"
            android:textColor="#000000" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#DDDDDD" />

        <Button
            android:id="@+id/shop_poi_setstart"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/qidian"
            android:text="@string/sheweiqidian"
            android:textColor="#000000" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#DDDDDD" />

        <Button
            android:id="@+id/shop_poi_setend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/zhongdian"
            android:text="@string/sheweizhongdian"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>